--- a/.github/workflows/windows_build_install_package.yml
+++ b/.github/workflows/windows_build_install_package.yml
@@ -82,12 +82,14 @@ jobs:
         run: |
           mkdir monica_${{ github.ref_name }}
           mkdir monica_${{ github.ref_name }}/bin
+          mkdir monica_${{ github.ref_name }}/documentation
           mkdir monica_${{ github.ref_name }}/bin/soil
           mkdir monica_${{ github.ref_name }}/monica-parameters
-          mkdir monica_${{ github.ref_name }}/MONICA
-          mkdir monica_${{ github.ref_name }}/MONICA/monica-ini-to-json
-          mkdir monica_${{ github.ref_name }}/MONICA/Examples
-          mkdir monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2
+          mkdir monica_${{ github.ref_name }}/bin/monica-ini-to-json
+          mkdir monica_${{ github.ref_name }}/projects
+          mkdir monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer
+          mkdir monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/python
+          mkdir monica_${{ github.ref_name }}/projects/Hohenfinow2-single-run
           cp monica-parameters/soil/CapillaryRiseRates.sercapnp monica_${{ github.ref_name }}/bin/soil/
           cp monica-parameters/soil/SoilCharacteristicData.sercapnp monica_${{ github.ref_name }}/bin/soil/
           cp monica-parameters/soil/SoilCharacteristicModifier.sercapnp monica_${{ github.ref_name }}/bin/soil/
@@ -99,15 +101,15 @@ jobs:
           cp -r monica-parameters monica_${{ github.ref_name }}/monica-parameters/          
 
           cp monica/LICENSE monica_${{ github.ref_name }}/bin/
-          cp monica/documentation/de_benutzerhandbuch_MONICA_windows.pdf monica_${{ github.ref_name }}/bin/
-          cp monica/documentation/en_user_manual_MONICA_windows.pdf monica_${{ github.ref_name }}/bin/
+          cp monica/documentation/de_benutzerhandbuch_MONICA_windows.pdf monica_${{ github.ref_name }}/documentation/
+          cp monica/documentation/en_user_manual_MONICA_windows.pdf monica_${{ github.ref_name }}/documentation/
           cp monica/src/python/monica_io3.py monica_${{ github.ref_name }}/bin/
           cp mas-infrastructure/src/python/services/soil/soil_io3.py monica_${{ github.ref_name }}/bin/
 
-          cp monica/src/python/monica-ini-to-json/monica-ini-to-json.py monica_${{ github.ref_name }}/MONICA/monica-ini-to-json/
-          cp monica/src/python/monica-ini-to-json/conversion-template-sim.json monica_${{ github.ref_name }}/MONICA/monica-ini-to-json/
-          cp monica/src/python/monica-ini-to-json/conversion-template-site.json monica_${{ github.ref_name }}/MONICA/monica-ini-to-json/
-          cp monica/src/python/monica-ini-to-json/conversion-template-crop.json monica_${{ github.ref_name }}/MONICA/monica-ini-to-json/
+          cp monica/src/python/monica-ini-to-json/monica-ini-to-json.py monica_${{ github.ref_name }}/bin/monica-ini-to-json/
+          cp monica/src/python/monica-ini-to-json/conversion-template-sim.json monica_${{ github.ref_name }}/bin/monica-ini-to-json/
+          cp monica/src/python/monica-ini-to-json/conversion-template-site.json monica_${{ github.ref_name }}/bin/monica-ini-to-json/
+          cp monica/src/python/monica-ini-to-json/conversion-template-crop.json monica_${{ github.ref_name }}/bin/monica-ini-to-json/
 
           cp -r monica-parameters/crop-residues monica_${{ github.ref_name }}/monica-parameters/
           cp -r monica-parameters/crops monica_${{ github.ref_name }}/monica-parameters/
@@ -116,18 +118,25 @@ jobs:
           cp -r monica-parameters/general monica_${{ github.ref_name }}/monica-parameters/
           cp -r monica-parameters/soil monica_${{ github.ref_name }}/monica-parameters/
 
-          cp monica/installer/Hohenfinow2/crop-min.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/crop-min-ic.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/site-min.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/sim-min.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/sim-min-ic.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/climate-min.csv monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/crop.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/site.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/sim.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/crop+.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/site+.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/sim+.json monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
-          cp monica/installer/Hohenfinow2/climate.csv monica_${{ github.ref_name }}/MONICA/Examples/Hohenfinow2/
+          cp monica/installer/Hohenfinow2/crop-min.json monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/
+          cp monica/installer/Hohenfinow2/site-min.json monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/
+          cp monica/installer/Hohenfinow2/sim-min.json monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/
+          cp monica/installer/Hohenfinow2/climate-min.csv monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/
+          cp monica/installer/Hohenfinow2/python/run-producer.py monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/python/
+          cp monica/installer/Hohenfinow2/python/run-consumer.py monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/python/
+          cp monica/installer/Hohenfinow2/python/start_monica_server.cmd monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/python/
+          cp monica/installer/Hohenfinow2/python/start_consumer.cmd monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/python/
+          cp monica/installer/Hohenfinow2/python/start_producer.cmd monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/python/
+          cp monica/installer/Hohenfinow2/python/start_producer_consumer_pipeline.cmd monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/python/
+          cp mas-infrastructure/src/python/services/soil/soil_io3.py monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/python/
+          cp monica/src/python/monica_io3.py monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/python/
+          cp monica/installer/Hohenfinow2/python/README_pipeline.md monica_${{ github.ref_name }}/projects/Hohenfinow2-producer-consumer/README.md
 
-          tar -c -z -f monica_win64_${{ github.ref_name }}.zip monica_${{ github.ref_name }}
+          cp monica/installer/Hohenfinow2/crop.json monica_${{ github.ref_name }}/projects/Hohenfinow2-single-run/
+          cp monica/installer/Hohenfinow2/site.json monica_${{ github.ref_name }}/projects/Hohenfinow2-single-run/
+          cp monica/installer/Hohenfinow2/sim.json monica_${{ github.ref_name }}/projects/Hohenfinow2-single-run/
+          cp monica/installer/Hohenfinow2/climate.csv monica_${{ github.ref_name }}/projects/Hohenfinow2-single-run/
+          cp monica/installer/Hohenfinow2/python/run_monica.cmd monica_${{ github.ref_name }}/projects/Hohenfinow2-single-run/
+          cp monica/installer/Hohenfinow2/python/README_single.md monica_${{ github.ref_name }}/projects/Hohenfinow2-single-run/README.md
+
+          Compress-Archive -Path monica_${{ github.ref_name }}/* -Destination monica_win64_${{ github.ref_name }}.zip
